--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>Hello, World!</h1>
   <p>This is a simple HTML page.</p>
-  <p>Test webhook!!!</p>
+  <p>Test webhook in dev-branch!!!</p>
 </body>
 </html>
